# wality

./: .gitignore  CMakeLists.txt
includes/: ebo.hpp  fbo.hpp  gif.hpp  media.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp  video.hpp  window.hpp
src/buffers/: ebo.cpp  fbo.cpp  vao.cpp  vbo.cpp
src/core/: main.cpp  window.cpp
src/data-structures/: gif.cpp  media.cpp  video.cpp
src/graphics/: renderer.cpp  shader.cpp  texture.cpp
